--- a/index.html
+++ b/index.html
@@ -251,9 +251,31 @@
                 </div>
             </div>
         </section>
+        <!-- FAQ section -->
     </main>
-    <footer>
-
+    <footer class="bg-neutral ">
+        <div class="container p-4 mx-auto flex flex-col space-y-4 md:justify-between  items-center text-white md:px-20 md:py-14">
+            <div>
+                <ul class="grid grid-cols-2 md:grid-cols-5 ">
+                    <li><a href="">About</a></li>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">career</a></li>
+                    <li><a href="">Help</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                </ul>
+                <p class="text-sm mt-4">&copy;2020 bike All rights reserved</p>
+            </div> 
+            <div>
+                <p class=" mb-4 text-center ">Get the app</p> 
+                <div class="grid grid-cols-2 md:grid-cols-1 gap-4">
+                    <a><img class="w-32" src="./images/others/android.png" alt=""></a>
+                    <a><img class="w-32" src="./images/others/ios.png" alt=""></a>
+                </div>
+            </div>
+        </div>
     </footer>
+
+    
 </body>
 </html>
